--- a/package.json
+++ b/package.json
@@ -2,15 +2,38 @@
   "name": "csvbuilder",
   "version": "1.0.0",
   "description": "Utility package for building CSV files.",
-  "main": "dist/index.ts",
-  "author": "Tamas Vajda",
+  "main": "dist/index.js",
+  "module": "dist/index.mjs",
+  "types": "dist/index.d.ts",
+  "author": {
+    "name": "Tamás Vajda",
+    "email": "vajdatomi98@gmail.com"
+  },
+  "keywords": [
+    "csv",
+    "builder",
+    "csv-builder",
+    "csvbuilder"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/WTomas/csvbuilder"
+  },
   "license": "MIT",
   "scripts": {
+    "build": "tsup src/index.ts --format cjs,esm --dts",
+    "lint": "tsc",
     "test:unit": "node --unhandled-rejections=warn ./node_modules/jest/bin/jest.js --runInBand --testTimeout=15000 --unhandled-rejections=warn --config ./jest-unit.config.json"
   },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/"
+  },
   "devDependencies": {
+    "@changesets/cli": "^2.27.9",
     "@types/jest": "^29.5.13",
     "jest": "^29.7.0",
-    "ts-jest": "^29.2.5"
+    "ts-jest": "^29.2.5",
+    "tsup": "^8.3.0",
+    "typescript": "^5.6.3"
   }
 }
