--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
               with: 
                 node-version: 20.18.0
                 registry-url: https://registry.npmjs.org/
-            - run: yarn install
+            - run: yarn install --frozen-lockfile
             - run: yarn lint && yarn build
 
 
