--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "csvbuilder",
+  "name": "csv-builder-ts",
   "version": "1.0.0",
   "description": "Utility package for building CSV files.",
   "main": "dist/index.js",
