--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "csv-builder-ts",
+  "name": "ts-csv-builder",
   "version": "1.0.0",
   "description": "Utility package for building CSV files.",
   "main": "dist/index.js",
@@ -13,6 +13,7 @@
     "csv",
     "builder",
     "csv-builder",
+    "ts-csv-builder",
     "csvbuilder"
   ],
   "repository": {
