--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ts-csv-builder",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "Utility package for building CSV files.",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
@@ -18,7 +18,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/WTomas/csvbuilder"
+    "url": "git+https://github.com/WTomas/csvbuilder.git"
   },
   "license": "MIT",
   "scripts": {
